<?xml version="1.0" ?>
<package format="2">
  <name>abb_crb1100_support</name>
  <version>0.0.1</version>
  <description>ABB CRB 1100 Robot Description</description>
  <author email="yadunund@openrobotics.org">Yadunund</author>
  <maintainer email="yadunund@openrobotics.org">Yadunund</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>abb_resources</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
